cmake_minimum_required(VERSION 3.12)
project(luaFiles)

if(NOT COPPELIASIM_INCLUDE_DIR)
    if(DEFINED ENV{COPPELIASIM_ROOT_DIR})
        set(COPPELIASIM_INCLUDE_DIR $ENV{COPPELIASIM_ROOT_DIR}/programming/include)
    else()
        set(COPPELIASIM_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../include)
    endif()
endif()
list(APPEND CMAKE_MODULE_PATH ${COPPELIASIM_INCLUDE_DIR}/cmake)
find_package(CoppeliaSim 4.5.0.7 REQUIRED)

file(GLOB LUA_FILES CONFIGURE_DEPENDS *.lua)
foreach(LUA_FILE IN LISTS LUA_FILES)
    coppeliasim_add_lua(${LUA_FILE})
endforeach()
coppeliasim_add_lua_directory("addOns")
coppeliasim_add_lua_directory("models")
coppeliasim_add_lua_directory("deprecated")
coppeliasim_add_lua_directory("utils")
coppeliasim_add_lua_directory("sim")
coppeliasim_add_lua_directory("sha1")
